[gd_scene load_steps=3 format=3 uid="uid://dh34n4p0riaef"]

[ext_resource type="Script" path="res://cenas/hud.gd" id="1_m8qsk"]

[sub_resource type="Theme" id="Theme_bejx1"]

[node name="hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_m8qsk")
metadata/_edit_use_anchors_ = true

[node name="PanelRestart" type="Panel" parent="."]
visible = false
clip_contents = true
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="restart" type="Button" parent="PanelRestart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -15.5
offset_right = 39.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "retiniciar"

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
offset_left = 40.0
offset_top = 25.0
offset_right = 163.0
offset_bottom = 48.0

[node name="pontos" type="HSplitContainer" parent="GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/pontos"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "pontos:"

[node name="pts" type="Label" parent="GridContainer/pontos"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "0"

[node name="HFlowContainer2" type="HFlowContainer" parent="GridContainer"]
layout_mode = 2

[node name="vida" type="HSplitContainer" parent="GridContainer/HFlowContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="GridContainer/HFlowContainer2/vida"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "vidas:"

[node name="vidas" type="Label" parent="GridContainer/HFlowContainer2/vida"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "5"

[node name="menu" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_bejx1")

[node name="VSplitContainer" type="VSplitContainer" parent="menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -37.0
offset_right = 28.5
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="Iniciar" type="Button" parent="menu/VSplitContainer"]
layout_mode = 2
text = "Iniciar"

[node name="sair" type="Button" parent="menu/VSplitContainer"]
layout_mode = 2
text = "sair"

[node name="menuPause" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_bejx1")

[node name="VSplitContainer" type="VSplitContainer" parent="menuPause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -37.0
offset_right = 28.5
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="continuar" type="Button" parent="menuPause/VSplitContainer"]
layout_mode = 2
text = "continuar"

[node name="menu" type="Button" parent="menuPause/VSplitContainer"]
layout_mode = 2
text = "voltar ao menu"

[connection signal="pressed" from="PanelRestart/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="menu/VSplitContainer/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="menu/VSplitContainer/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="menuPause/VSplitContainer/continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="menuPause/VSplitContainer/menu" to="." method="_on_menu_pressed"]
